# zephyr

./: MAINTAINERS.yml  west.yml
arch/riscv/core/: smp.c
arch/riscv/custom/xuantie/: CMakeLists.txt  Kconfig  csr_context.h  riscv_custom.h
boards/xuantie/xuantie_xiaohui_c908v/: Kconfig.xuantie_xiaohui_c908v  board.cmake  board.yml  xuantie_xiaohui_c908v.dts  xuantie_xiaohui_c908v.yaml  xuantie_xiaohui_c908v_riscv_xiaohui_smp.yaml
cmake/compiler/gcc/: target_riscv.cmake
drivers/counter/: CMakeLists.txt  counter_xuantie.c
drivers/interrupt_controller/: CMakeLists.txt  intc_xuantie_clic.S
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.xuantie  uart_xuantie.c  uart_xuantie_ll.c  uart_xuantie_ll.h
drivers/timer/: riscv_machine_timer.c
dts/bindings/counter/: xuantie,counter.yaml
dts/bindings/cpu/: xuantie,c908.yaml  xuantie-common.yaml
dts/bindings/timer/: xuantie,systimer.yaml
dts/riscv/xuantie/: xiaohui_c908.dtsi
samples/boards/xuantie/hello_world/: README.rst  prj.conf
soc/xuantie/riscv_family/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml
soc/xuantie/riscv_family/cpu/c908v/: CMakeLists.txt  vector.S
soc/xuantie/riscv_family/xiaohui/: CMakeLists.txt  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  linker.ld  smp.c  soc.c
soc/xuantie/riscv_family/xiaohui/include/: soc.h
soc/xuantie/riscv_family/xiaohui/include/drv/: dev_tag.h
